# Shadowbid-Arcium

./: .gitignore  API.md  ARCHITECTURE.md  Anchor.toml  Arcium.toml  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  package-lock.json  package.json  tsconfig.json
app/: sdk.ts
artifacts/: circuits_hash.txt
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/shadowbid/: Cargo.toml
programs/shadowbid/src/: arcium_integration.rs  lib.rs
shadowbid-frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
shadowbid-frontend/shadowbid-frontend/: index.html  package-lock.json  package.json
shadowbid-frontend/src/: App.tsx  index.css  main.tsx
shadowbid-frontend/src/components/: ErrorBoundary.tsx  Footer.tsx  Navbar.tsx  WalletProvider.tsx
shadowbid-frontend/src/idl/: shadowbid.json
shadowbid-frontend/src/lib/: SolanaProvider.tsx  hooks.ts  shadowbid-sdk.ts  utils.ts
shadowbid-frontend/src/pages/: AuctionDetails.tsx  AuctionHistory.tsx  BrowseAuctions.tsx  CreateAuction.tsx  Dashboard.tsx  HomePage.tsx  HowItWorks.tsx
shadowbid-frontend/src/types/: shadowbid.ts
tests/: shadowbid.test.ts
