[package]
name = "shadowbid"
version = "0.1.0"
description = "Privacy-preserving blind auction system on Solana with Arcium MPC"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadowbid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
arcium-anchor = "0.7.0"
arcium-client = { version = "0.7.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10.3"
ahash = "=0.8.11"
sha2 = "0.10"
hex = "0.4"
blake3 = "=1.7.0"


[dev-dependencies]
